Fix uvicorn command not found error in Railway - Create dedicated start.py script for reliable server startup - Use python -m uvicorn approach to ensure module is found - Update Procfile and railway.toml to use new startup script - Add error handling and logging for deployment debugging This should resolve the 'uvicorn: command not found' error in Railway.

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "uvicorn backend_server:app --host 0.0.0.0 --port $PORT"
+startCommand = "python start.py"
 
 [env]
 NIXPACKS_PYTHON_VERSION = "3.10"
