--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,26 @@
 services:
   - type: web
-    name: multi-agent-research
+    name: multi-agent-research-tool
     env: python
-    plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: python start.py
+    plan: free  # Change to 'starter' ($7/month) for production
+    buildCommand: ./build.sh
+    startCommand: ./start.sh
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.0
+      - key: NODE_VERSION
+        value: 18.17.0
       - key: ENVIRONMENT
         value: production
       - key: MAX_PAPERS
         value: 10
+      - key: RATE_LIMIT_REQUESTS
+        value: 100
+      - key: RATE_LIMIT_WINDOW
+        value: 3600
+      - key: HOST
+        value: 0.0.0.0
+      - key: PORT
+        value: 10000
+    # Environment variables you'll need to set in Render dashboard:
+    # GROQ_API_KEY - Your Groq API key (keep this secret!)
