Add Render deployment configuration - Fix .gitignore to allow requirements.txt - Add requirements.txt with all dependencies - Add render.yaml for deployment config - Add build.sh and start.sh scripts - Update backend to serve frontend static files

--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,16 @@ env/
 
 # Output files
 outputs/
-*.json
-*.txt
+outputs/*.json
+outputs/*.txt
+research_report_*.txt
+research_report_*.json
 logs/
 *.log
+
+# Allow important txt files
+!requirements.txt
+!requirements*.txt
 
 # OS files
 .DS_Store
