Add multi-source research capability and comprehensive SaaS strategy
- Add Semantic Scholar integration for 200M+ papers access
- Remove PWA functionality (manifest, service worker, hooks)
- Add comprehensive SaaS transformation strategy document
- Enhance researcher agent with multi-source support
- Add paper deduplication logic
- Update dependencies for async HTTP requests
- Clean mobile CSS and remove PWA-specific styles

This enables searching across ArXiv + Semantic Scholar simultaneously
with smart deduplication and enhanced metadata collection.

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: multi-agent-research-tool
     env: python
-    plan: free  # Change to 'starter' ($7/month) for production
+    plan: free 
     buildCommand: ./build.sh
     startCommand: ./start.sh
     envVars:
@@ -22,5 +22,4 @@ services:
         value: 0.0.0.0
       - key: PORT
         value: 10000
-    # Environment variables you'll need to set in Render dashboard:
-    # GROQ_API_KEY - Your Groq API key (keep this secret!)
+    
