--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ httptools>=0.6.0
 uvloop>=0.17.0
 aiofiles>=23.0.0
 aiohttp>=3.8.0
+
+# RAG and vector search dependencies
+sentence-transformers>=2.2.0
+faiss-cpu>=1.7.4
+numpy>=1.24.0
+boto3>=1.34.0
