Remove large model files from git tracking
- Add models/ to .gitignore to prevent large files
- Models will be downloaded automatically by sentence-transformers
- Keeps repository lightweight and fast to clone

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,12 @@ ehthumbs.db
 *.tmp
 *.temp
 .cache/
+
+# Machine learning models (downloaded automatically)
+models/
+*.bin
+*.safetensors
+*.onnx
+*.h5
+*.pkl
+*.joblib
