--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ httptools>=0.6.0
 uvloop>=0.17.0
 aiofiles>=23.0.0
 aiohttp>=3.8.0
+psutil>=5.9.0
 
 # RAG and vector search dependencies
 sentence-transformers>=2.2.0
