--- a/deployment/amplify.yml
+++ b/deployment/amplify.yml
@@ -4,7 +4,8 @@ frontend:
     preBuild:
       commands:
         - cd frontend
-        - npm ci
+        - npm ci --only=production --ignore-scripts
+        - npm install --only=dev
     build:
       commands:
         - npm run build
@@ -15,3 +16,4 @@ frontend:
   cache:
     paths:
       - frontend/node_modules/**/*
+      - frontend/.npm/**/*
