Add debug listing to verify dist directory location

--- a/deployment/amplify.yml
+++ b/deployment/amplify.yml
@@ -9,6 +9,7 @@ frontend:
     build:
       commands:
         - npm run build
+        - ls -la dist/
   artifacts:
     baseDirectory: dist
     files:
