--- a/deployment/amplify.yml
+++ b/deployment/amplify.yml
@@ -10,8 +10,10 @@ frontend:
       commands:
         - npm run build
         - ls -la dist/
+        - cd ..
+        - ls -la frontend/dist/
   artifacts:
-    baseDirectory: dist
+    baseDirectory: frontend/dist
     files:
       - '**/*'
   cache:
