Copy build artifacts to root dist directory
This should resolve the Amplify artifact directory issue by copying the built files from frontend/dist to ./dist

--- a/deployment/amplify.yml
+++ b/deployment/amplify.yml
@@ -11,9 +11,10 @@ frontend:
         - npm run build
         - ls -la dist/
         - cd ..
-        - ls -la frontend/dist/
+        - cp -r frontend/dist ./dist
+        - ls -la dist/
   artifacts:
-    baseDirectory: frontend/dist
+    baseDirectory: dist
     files:
       - '**/*'
   cache:
