--- a/deployment/amplify.yml
+++ b/deployment/amplify.yml
@@ -3,18 +3,14 @@ frontend:
   phases:
     preBuild:
       commands:
-        - cd frontend
-        - npm ci --only=production --ignore-scripts
-        - npm install --only=dev
+        - npm ci --only=production --ignore-scripts --prefix frontend
+        - npm install --only=dev --prefix frontend
     build:
       commands:
-        - npm run build
-        - ls -la dist/
-        - cd ..
-        - cp -r frontend/dist ./dist
-        - ls -la dist/
+        - cd frontend && npm run build
+        - ls -la frontend/dist/
   artifacts:
-    baseDirectory: dist
+    baseDirectory: frontend/dist
     files:
       - '**/*'
   cache:
