--- a/deployment/amplify.yml
+++ b/deployment/amplify.yml
@@ -1,19 +1,18 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - npm ci --only=production --ignore-scripts --prefix frontend
-        - npm install --only=dev --prefix frontend
-    build:
-      commands:
-        - cd frontend && npm run build
-        - ls -la frontend/dist/
-  artifacts:
-    baseDirectory: frontend/dist
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - frontend/node_modules/**/*
-      - frontend/.npm/**/*
+applications:
+  - frontend:
+      phases:
+        preBuild:
+          commands:
+            - npm ci --cache .npm --prefer-offline
+        build:
+          commands:
+            - npm run build
+      artifacts:
+        baseDirectory: dist
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - .npm/**/*
+      appRoot: frontend
