--- a/deployment/amplify.yml
+++ b/deployment/amplify.yml
@@ -7,6 +7,8 @@ applications:
             - npm ci --cache .npm --prefer-offline
         build:
           commands:
+            - echo "Building with environment variables..."
+            - echo "VITE_API_URL=$VITE_API_URL"
             - npm run build
       artifacts:
         baseDirectory: dist
