--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Lambda requirements (minimal for testing)
+# Multi-Agent Research Tool - Lambda Deployment Requirements
 # Core Lambda adapter
 mangum>=0.17.0
 
@@ -10,15 +10,25 @@ uvicorn>=0.24.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
 
-# Basic research dependencies
-arxiv>=1.4.0
+# LangChain core dependencies
+langchain>=0.1.0
+langchain-core>=0.3.0
+
+# AI/ML service integration
 groq>=0.4.0
+
+# Research APIs and tools
+arxiv>=1.4.0
 requests>=2.31.0
 
-# Basic utilities
-aiofiles>=23.0.0
+# Async HTTP and file handling
 aiohttp>=3.8.0
-boto3>=1.34.0
+aiofiles>=23.0.0
 
-# Additional Lambda utilities
+# AWS and Lambda utilities
+boto3>=1.34.0
+botocore>=1.29.0
 aws-lambda-powertools>=2.0.0
+
+# System utilities
+psutil>=5.9.0
